# check_txt

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  virus_check.rs  web_server.rs
static/: index.html
