[package]
name = "check_txt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
indicatif = "0.17"
zip = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
regex = "1.10"
actix-web = "4.4"
actix-files = "0.6"
actix-multipart = "0.6"
futures = "0.3"
env_logger = "0.10"
log = "0.4"
html2text = "0.4.0"
urlencoding = "2.1.3"
base64 = "0.21.7"
