[package]
name = "check_txt"
version = "0.1.0"
edition = "2021"
authors = ["Jiaquan Pang <pjiaquan@gmail.com>"]
description = "A powerful file security checker for TXT and EPUB files with virus scanning capabilities"
license = "MIT"
repository = "https://github.com/pjiaquan/check_txt"
readme = "README.md"
keywords = ["security", "file-checker", "virus-scan", "epub", "txt"]
categories = ["security", "command-line-utilities", "web-programming::http-server"]

[dependencies]
anyhow = "1.0"
indicatif = "0.17"
zip = "8"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.4"
regex = "1.5"
actix-web = "4.0"
actix-files = "0.6"
actix-multipart = "0.7"
futures = "0.3"
env_logger = "0.10"
log = "0.4"
html2text = "0.16"
urlencoding = "2.1.3"
base64 = "0.21.7"
html5ever = "0.38"
markup5ever_rcdom = "0.38"
url = "2.5"
image = "0.25"
rqrr = "0.10"
